[gd_scene load_steps=7 format=3]

# External resources for this scene: the Player and Obstacle scenes, the
# background texture, the main script and an optional music file.
[ext_resource type="PackedScene" path="res://Player.tscn" id=1]
[ext_resource type="PackedScene" path="res://Obstacle.tscn" id=2]
[ext_resource type="Texture2D" path="res://assets/background.png" id=3]
[ext_resource type="Script" path="res://scripts/MainGame.gd" id=4]

[node name="MainGame" type="Node2D"]
script = ExtResource(4)
obstacle_scene = ExtResource(2)

[node name="Background" type="Sprite2D" parent="MainGame"]
texture = ExtResource(3)
position = Vector2(0, 0)
scale = Vector2(1, 1)

[node name="SpawnerContainer" type="Node2D" parent="MainGame"]

[node name="Player" parent="MainGame" instance=ExtResource(1)]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainGame"]
autoplay = false

[node name="CanvasLayer" type="CanvasLayer" parent="MainGame"]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
text = "Score: 0"
position = Vector2(20, 20)

[node name="TutorialLabel" type="Label" parent="CanvasLayer"]
text = "Use left/right arrows to switch lanes. Avoid obstacles on the beat!"
position = Vector2(60, 200)
visible = true

[node name="RetryButton" type="Button" parent="CanvasLayer"]
text = "Retry"
position = Vector2(200, 300)
visible = false